--- a/public/main.html
+++ b/public/main.html
@@ -22,6 +22,28 @@
 			<td>C2</td>
 			<td><input type="string" id="C2" value="test2" style="width:100px;height:40px;text-align:right"/></td>
 		</tr>
+		<tr>
+			<td>C3</td>
+			<td><input type="string" id="C3" value="test2" style="width:100px;height:40px;text-align:right"/></td>
+		</tr>
+		<tr>
+			<td>C4</td>
+			<td><input type="string" id="C4" value="test2" style="width:100px;height:40px;text-align:right"/></td>
+		</tr>
+		<tr>
+			<td>C5</td>
+			<td><input type="string" id="C5" value="test2" style="width:100px;height:40px;text-align:right"/></td>
+		</tr>
+		<tr>
+			<td>C6</td>
+			<td><input type="string" id="C6" value="test2" style="width:100px;height:40px;text-align:right"/></td>
+		</tr>
+		<tr>
+			<td>C7</td>
+			<td><input type="string" id="C2" value="test2" style="width:100px;height:40px;text-align:right"/></td>
+		</tr>
+
+
 
 	</table>
 
@@ -45,3 +67,7 @@
 	<td><button onclick="myFunction()">Calculate</button></td>
 </body>
 </html>
+
+
+
+<!-- redirect... https://stark-spire-21434.herokuapp.com/insert -->
