--- a/public/main.html
+++ b/public/main.html
@@ -82,6 +82,14 @@
     </form>
 </div>
 
+<div id="display">
+    <h1>display</h1>
+    <form action="/display" method="get" >
+        <input type="submit" value="display" />
+    </form>
+</div>
+
+
 </body>
 </html>
 
