--- a/public/poker_home.html
+++ b/public/poker_home.html
@@ -11,32 +11,13 @@
 
 <h1>Student Database</h1>
 
-<div id="insert">
-    <h1>insert</h1>
-    <form action="/insert" method="post" >
+<div id="msg">
+    <h1>msg for gm</h1>
+    <form action="/msg" method="post" >
 
-            <label for="id1">ID:</label>
-            <input type="text" id="id1" placeholder="Enter ID" name="id1"/><br>
+            <label for="msg">ID:</label>
+            <input type="text" id="msg" placeholder="Msg for gm" name="msg"/><br>
 
-            <label for="fn1">first name:</label>
-            <input type="text" id="fn1" placeholder="Enter first name" name="fn1" /><br>
-
-            <label for="ln1">last name:</label>
-            <input type="text" id="ln1" placeholder="Enter last name" name="ln1"/><br>
-
-            <label for="w1">weight:</label>
-            <input type="text" id="w1" placeholder="Enter weight" name="w1" /><br>
-
-            <label for="h1">height:</label>
-            <input type="text" id="h1" placeholder="Enter height" name="h1"/><br>
-
-            <label for="ln1">hair_colour:</label>
-            <input type="text" id="hc1" placeholder="Enter hair colour" name="hc1" /><br>
-
-            <label for="gpa1">gpa:</label>
-            <input type="float" id="gpa1" placeholder="Enter gpa" name="gpa1"/><br>
-
-            <input type="submit" value="insert" />
     </form>
 </div>
 
