win loss& button

--- a/public/histogram.html
+++ b/public/histogram.html
@@ -111,6 +111,16 @@
 			<td id="N11"><td>
 		</tr>
 	</table>
-	<td><button onclick="myFunction()">Calculate</button></td>
+	
+
+
+<button id="create" class="float-left submit-button" >create room</button>
+<script type="text/javascript">
+    document.getElementById("create").onclick = function () {
+        location.href = "www.yoursite.com";
+    };
+</script>
+
+
 </body>
 </html>
