win loss& button 3

--- a/public/poker_home.html
+++ b/public/poker_home.html
@@ -16,6 +16,22 @@
 <!-- var win,loss, win_percent -->
 <div id="ranking">
     <h1>player ranking</h1>
+    <div class="player name">
+        <ol>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+        </ol>
+    </div>
+
+
+    <div class="win loss of that player">
+        <ol>
+            <li>1W 1L</li>
+            <li>2W 2L</li>
+            <li>3W 3L</li>
+        </ol>      
+    </div>
 
 </div>
 
@@ -23,7 +39,7 @@
 
 <table cellpadding="9"  id="winloss">
     <tr>
-        <th style="color: #D8000D" colspan="2">Histogram</th>
+        <th>My Stats</th>
     </tr>
     <tr>
         <td width="10%">win# </td>
