win loss& button 6

--- a/public/poker_home.html
+++ b/public/poker_home.html
@@ -17,27 +17,23 @@
 
 
 
-<div id="ranking" align="left">
+<div id="ranking">
 
 <div class="container">
     <h1>player ranking</h1>
     <div class="row">
         <div class="col">
-            <h1>player name</h1>
-            <ol>
-                <li>Coffee</li>
-                <li>Tea</li>
-                <li>Milk</li>
-            </ol>
+            player name
+            p1
+            p2
+            p3
         </div>
 
         <div class="col">
-            <h1>player win/loss</h1>
-            <ol>
-                <li>1W 1L</li>
-                <li>2W 2L</li>
-                <li>3W 3L</li>
-            </ol>    
+            player win/loss
+            1W 1L
+            2W 2L
+            3W 3L
         </div>
 
     </div>
@@ -65,12 +61,11 @@
         <td> loss </td>
     </tr>
 
-    <tr>
-        <form action="/rank check" method="post" >
-        <input type="submit" value="update" />
-    </tr>
+
 </table>
 
+<form action="/rank check" method="post" >
+<input type="submit" value="update" />
 
 <div id="msg" align="right">
     <h1>msg for gm</h1>
