--- a/public/signup.html
+++ b/public/signup.html
@@ -10,7 +10,7 @@
 
 <h1>Sign Up</h1>
 
-<div id="signup">
+<div id="ssignup">
    <h1>User Information</h1>
    <form action="/signup" method="post">
       <label for="sid">ID:</label>
