--- a/public/homepage.html
+++ b/public/homepage.html
@@ -8,6 +8,12 @@
 
 </head>
 <body>
+
+<script>
+var user=parent.document.getElementById('Lid').value;
+</script>
+
+
 <a href="https://stark-spire-21434.herokuapp.com/modify.html">
     <input type="button" value="Account info" >
 </a>
