--- a/public/login.html
+++ b/public/login.html
@@ -55,7 +55,7 @@
 	<p>2 player BlackJack</p>
 <div class="table1">
 	<form id="table11">
-		      ID:<input type=“text" name="Lid" id="Lid"/>
+		      ID:<input type="text" name="Lid" id="Lid"/>
 		<br/>
 		Password:<input type="password" name="Lpassword" id="Lpassword"/>
 		<br/>
