--- a/public/modify.html
+++ b/public/modify.html
@@ -12,7 +12,7 @@
 
     <script>
     var user=parent.document.getElementById('Lid').value;
-    document.getElementById("userid").innerHTML=user;
+    document.getElementById("userid").innerHTML=hi;
 
 
     </script>
