modify id test2

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -16,13 +16,11 @@
     <input type="button" value="Account info" >
 </a>
 
-<p id=home>Player Homepage</p>
+<p id="home">Player Homepage</p>
 
-<script>
+<!-- <script>
 var user=parent.document.getElementById('Lid').value;
-document.getElementById("home").innerHTML=user;
-
-</script>
+</script> -->
 <!-- need js to put back  -->
 <!-- var win,loss, win_percent -->
 
