--- a/public/modify.html
+++ b/public/modify.html
@@ -11,10 +11,8 @@
 <body>
 
     <script>
-    var user=parent.document.getElementById('Lid').value;
-    document.getElementById("userid").innerHTML=hi;
-
-
+    var user=parent.parent.document.getElementById('Lid').value;
+    document.getElementById("userid").innerHTML=user;
     </script>
 
 
