modify id test3

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -18,9 +18,11 @@
 
 <p id="home">Player Homepage</p>
 
-<!-- <script>
+<script>
 var user=parent.document.getElementById('Lid').value;
-</script> -->
+document.getElementById("home").innerHTML=user;
+
+</script>
 <!-- need js to put back  -->
 <!-- var win,loss, win_percent -->
 
