modify id test4

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -19,7 +19,7 @@
 <p id="home">Player Homepage</p>
 
 <script>
-var user=parent.document.getElementById('Lid').value;
+var user=parent.document.getElementById('table11').elements["Lid"];
 document.getElementById("home").innerHTML=user;
 
 </script>
