modify id test6

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -19,8 +19,8 @@
 <p id="home">Player Homepage</p>
 
 <script>
-var user=parent.document.getElementById('table11').elements["Lid"];
-document.getElementById("home").innerHTML=user;
+// var user=parent.document.getElementById('table11').elements[0];
+document.getElementById("home").innerHTML=fuckyou;
 
 </script>
 <!-- need js to put back  -->
