modify id test7

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -20,7 +20,7 @@
 
 <script>
 // var user=parent.document.getElementById('table11').elements[0];
-document.getElementById("home").innerHTML=fuckyou;
+document.getElementById("home").innerHTML=23;
 
 </script>
 <!-- need js to put back  -->
