modify id test8

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <!-- <link rel="stylesheet" type="text/css" href="poker_home.css"> -->
 <!-- <script type="text/javascript" src="poker_home.js"></script> -->
-
-
 </head>
 <body>
-
-
-
 
 <a href="https://stark-spire-21434.herokuapp.com/modify.html">
     <input type="button" value="Account info" >
@@ -20,7 +14,7 @@
 
 <script>
 // var user=parent.document.getElementById('table11').elements[0];
-document.getElementById("home").innerHTML=23;
+document.getElementById("home").innerHTML=hello;
 
 </script>
 <!-- need js to put back  -->
