--- a/public/login.html
+++ b/public/login.html
@@ -53,7 +53,7 @@
 
 <body>
 	<p>2 player BlackJack</p>
-<!-- <div class="table1"> -->
+<div class="table1">
 	<form id="table11">
 		      ID:<input type="text" name="Lid" id="Lid"/>
 		<br/>
@@ -64,8 +64,7 @@
             <input type="button" value="sign up" >
         </a>
 	</form>
-<!-- </div> -->
-
+</div>
  <input type="button" onClick="msgbox(1)" value="rule">
 
     
