--- a/public/modify.html
+++ b/public/modify.html
@@ -10,15 +10,20 @@
 
 <body>
 
-    <script>
-    var user=parent.parent.document.getElementById('Lid').value;
-    document.getElementById("userid").innerHTML=user;
-    </script>
+
 
 
 
     <p align="center" font size="5">Personal Information</p>
-    <p>ID:</p>  <p id="userid"> </p> 
+    <p align:>ID:</p>  <p id="userid">666 </p> 
+
+
+    <script>
+    // var user=parent.parent.document.getElementById('Lid').value;
+    document.getElementById("userid").innerHTML=2333;
+    </script>
+
+    
 
     <form action="/modify" method="put" >
         <label for="mpassword">Password:</label>
