--- a/public/login.html
+++ b/public/login.html
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-	<p>2 player BlackJack</p>
+	<p id="BJ">2 player BlackJack</p>
 <div class="table1">
 	<form id="table11">
 		      ID:<input type="text" name="Lid" id="Lid"/>
