modify id test13

--- a/public/login.html
+++ b/public/login.html
@@ -54,7 +54,7 @@
 <body>
 	<p id="BJ">2 player BlackJack</p>
 <div class="table1">
-	<form action="/login" id="table11">
+	<form action="/login" method="post" id="table11">
 		      ID:<input type="text" name="Lid" id="Lid"/>
 		<br/>
 		Password:<input type="password" name="Lpassword" id="Lpassword"/>
