modify id test14

--- a/public/login.html
+++ b/public/login.html
@@ -52,20 +52,20 @@
 </head>
 
 <body>
-	<p id="BJ">2 player BlackJack</p>
+	<h1 id="BJ">2 player BlackJack</h1>
 <div class="table1">
-	<form action="/login" method="post" id="table11">
-		      ID:<input type="text" name="Lid" id="Lid"/>
+
+	<form action="/login" method="post" id="loginf">
+		ID:<input type="text" name="Lid" id="Lid"/>
 		<br/>
 		Password:<input type="password" name="Lpassword" id="Lpassword"/>
 		<br/>
-        <input type="button" value="login" name="Llogin" id="Llogin" onClick="test()" >
-        <a href="https://stark-spire-21434.herokuapp.com/signup.html">
-            <input type="button" value="sign up" >
-        </a>
+        <input type="submit" value="login" />        
 	</form>
+
+        <a href="https://stark-spire-21434.herokuapp.com/signup.html">
+        <input type="button" value="sign up" >
 </div>
- <input type="button" onClick="msgbox(1)" value="rule">
 
     
      
