--- a/public/homepage.html
+++ b/public/homepage.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 
-<!-- <link rel="stylesheet" type="text/css" href="poker_home.css"> -->
+ <link href="homepage.css " rel="stylesheet" type="text/css" /> 
+    
 <!-- <script type="text/javascript" src="poker_home.js"></script> -->
 
 
