--- a/public/GM.html
+++ b/public/GM.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>Game Manger</h1>
+  <h1>Game Manager</h1>
 	<div id="GGM">
 
   		<input id="Gsearch" type="text" name="search_id" placeholder="enter ID">
