--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
     <br/>
-    <input type="button" value="Login" name="Llogin" id="Llogin" onClick="test()" >
+    <input type="submit" value="Login" name="Llogin" id="Llogin" >
     <a href="https://stark-spire-21434.herokuapp.com/signup.html">
     <input type="button" value="SignUp" id="Lsignup">
     </a>
