--- a/public/signup.html
+++ b/public/signup.html
@@ -59,7 +59,7 @@
             alert("should enter all information");
         }
         else{
-         window.location.href="https://stark-spire-21434.herokuapp.com/homepage.html";
+         window.location.href="https://stark-spire-21434.herokuapp.com/login.html";
         }
         
         
