--- a/public/GM.html
+++ b/public/GM.html
@@ -28,7 +28,7 @@
   		    	<th colspan="1"></th>
   		    </tr>
   		</table>
-      <form action="/remove" method="post" >
+      <form action="/remove" method="delete" >
             <input type="text" id="Gdelete" placeholder="Enter ID" name="Gdelete"/>
             <input type="submit" id="gdbutton" value="delete" />
     </form>
