--- a/public/GM.html
+++ b/public/GM.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
    <link href="GM.css " rel="stylesheet" type="text/css" />	
-   <script type="text/javascript" src="index.js"></script> 
     <title>GM</title>
 </head>
 <body>
@@ -28,7 +27,7 @@
   		    	<th colspan="1"></th>
   		    </tr>
   		</table>
-      <form action="/remove" method="delete" >
+      <form action="/remove" method="post" >
             <input type="text" id="Gdelete" placeholder="Enter ID" name="Gdelete"/>
             <input type="submit" id="gdbutton" value="delete" />
     </form>
