--- a/public/signup.html
+++ b/public/signup.html
@@ -12,6 +12,9 @@
 <div id="ssignup">
    <h1>Sign Up</h1>
    <h2>User Information</h2>
+
+
+
    <form action="/signup" method="post">
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label for="sid" >ID:</label>
@@ -39,11 +42,13 @@
 
       <label for="sanswer">Question   Answer :</label>
       <input type="text" id="sanswer" placeholder="Enter Your Answer" name="sanswer"><br>
-      <input type="button" value="sign up"  id="ssign" onClick="test()" >
+      <input type="submit" value="sign up"  id="ssign" onClick="test()" >
       <a href="https://stark-spire-21434.herokuapp.com/login.html">
             <input type="button" value="Back" id="sback" >
         </a>
    </form>
+
+
 </div>
 <script>  
    function test(){
