--- a/public/signup.html
+++ b/public/signup.html
@@ -58,7 +58,7 @@
         if(ID=="" || pwd=="" || name=="" || age=="" || sq=="" || sa==""){
           alert("Please enter all information!");
         }
-        else if(ID=="GM"){
+        else if(ID=="GM1"){
           alert("Sorry!You can not sign up as GM!")
         }
         else{
