--- a/public/modify.html
+++ b/public/modify.html
@@ -12,7 +12,7 @@
     <div id="mmodify">
     <h1>Modify</h1>
     <h2 >Personal Information</h2>
-    <form action="/modify" method="put" >
+    <form action="/modify" method="post" >
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <label for="mid">ID:</label><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -28,13 +28,13 @@
 
         <label for="mquestion">Security Question:</label>
         <select name="mquestion" id="mquestion">
-            <option value="nonselect">Select</option>
-            <option value="mothername">What is your mother's name?</option>
-            <option value="fatherage">How old is your father?</option>
-            <option value="platenumber">What is your plate number?</option>
-            <option value="teacher">Who is your High School teacher?</option>
-            <option value="book">What is your favourite book?</option>
-            <option value="movie">Which is your favourite movie?</option>
+            <option value="0">Select</option>
+            <option value="1">What is your mother's name?</option>
+            <option value="2">How old is your father?</option>
+            <option value="3">What is your plate number?</option>
+            <option value="4">Who is your High School teacher?</option>
+            <option value="5">What is your favourite book?</option>
+            <option value="6">Which is your favourite movie?</option>
         </select><br>
 
         <label for="manswer">Question Answer :</label>
@@ -46,83 +46,7 @@
         </a>
     </form>
 </div>
-    
-<script>
-    app.post('/modify', function(req, res){
 
-        var mid=req.body.mid;
-
-        var mpassword=req.body.mpassword;
-
-        var mname=req.body.mname;
-
-        var mage=req.body.mage;
-
-        var mquestion=req.body.mquestion;
-
-        var manswer=req.body.manswer;
-
-        var fp="update users set ";
-
-        var sp= " where id = " + mid + ";";
-
-        var tmp;
-
-        if(mpassword){
-            tmp= fp + "password = " + mpassword + sp;
-            pool.query(tmp, function(error, result){
-            if(error) {
-                console.log("mod fail!");
-            }         
-            })
-        }
-
-        if(mname){
-            tmp= fp + "name = " + mname + sp;
-            pool.query(tmp, function(error, result){
-            if(error) {
-                console.log("mod fail!");
-            }
-            })
-        }
-
-        if(mage){
-            tmp= fp + "age = " + mage + sp;
-            pool.query(tmp, function(error, result){
-        if(error) {
-            console.log("mod fail!");
-            }
-            })
-        }
-
-// modify security question, get question from db?????
-//security question 从heroku db 里的sec_q table 里取
-//根据players 里sqnum，每个问题有个对应的数字
-//Heroku pg:psql 登录
-
-        if(mquestion){
-            tmp= fp + "question = " + "'"+ mquestion + "'"+ sp;
-            pool.query(tmp, function(error, result){
-            if(error) {
-                console.log("mod fail!");
-            }
-            })
-        }
-
-        if(manswer){
-            tmp= fp + "question answer = " + "'"+ hc2 + "'" + sp;
-            pool.query(tmp, function(error, result){
-            if(error) {
-                console.log("mod fail!");
-            }
-            })
-        }
-
-        res.redirect('https://stark-spire-21434.herokuapp.com/modify.html');
-        // res.redirect('http://localhost:5000/main.html');
-        });
-
-</script>
     
 </body>
 
