--- a/public/GM.html
+++ b/public/GM.html
@@ -33,7 +33,7 @@
   	<div id="gpublish">
       <form action="/gmmessage" method="post">
         <label for="gmessage"></label>
-        <textarea type="input" id="gmessage" cols="8" rows="20" style="OVERFLOW: hidden" placeholder="Message Box"></textarea></br>
+        <input type="text" id="gmessage" cols="8" rows="20" style="OVERFLOW: hidden" placeholder="Message Box"></textarea></br>
         <input type="submit" value="Publish" id="gpublish">
       </form>
       <a href="https://stark-spire-21434.herokuapp.com/login.html" id="GLog">
