--- a/public/GM.html
+++ b/public/GM.html
@@ -32,8 +32,10 @@
   	</div>
   	<div id="gpublish">
       <form action="/gmmessage" method="post">
-        <label for="gmessage"></label>
-        <input type="text" id="gmessage" cols="8" rows="20" style="OVERFLOW: hidden" placeholder="Message Box"></textarea></br>
+
+      <label for="gmessage" ></label>
+      <input type="text" id="gmessage" placeholder="Message Box" name="gmessage"/><br>
+
         <input type="submit" value="Publish" id="gpublish">
       </form>
       <a href="https://stark-spire-21434.herokuapp.com/login.html" id="GLog">
