--- a/public/GM.html
+++ b/public/GM.html
@@ -13,12 +13,9 @@
 		
 			<form action="/search" method="post" >
 				<input type="text" id="gsearch" name="gsearch" placeholder="enter ID">
-				<input type="submit" value="Search" id="search">
+				<input type="submit" value="Search" id="search" name="search">
 			</form>
 			
-
-  		<!-- <input id="Gsearch" type="text" name="search_id" placeholder="enter ID">
-  		<button onclick="searchID()"><a herf="---------" id="gsbutton" >Search</a></button> -->
   		<table>
   			<h2>User Information</h2>
   		    <tr>
