--- a/public/GM.html
+++ b/public/GM.html
@@ -2,39 +2,38 @@
 <html>
 <head>
     <meta charset="UTF-8">
-   <link href="GM.css " rel="stylesheet" type="text/css" />	 
+   <link href="GM.css " rel="stylesheet" type="text/css" /> 
     <title>GM</title>
 </head>
 <body>
 
   <h1>Game Manager</h1>
-	<div id="GGM">
-
-  		<input id="Gsearch" type="text" name="search_id" placeholder="enter ID">
-  		<button onclick="searchID()"><a herf="---------" id="gsbutton" >Search</a></button>
-  		<table>
-  			<h2>User Information</h2>
-  		    <tr>
-  		    	<th>ID</th>
-  		    	<th>Name</th>
-  		    	<th>Age</th>
-  		    	<th colspan="1"></th>
-  		    </tr>
-  		    <tr>
-  		    	<th>read</th>
-  		    	<th>read</th>
-  		    	<th>read</th>
-  		    	<th colspan="1"></th>
-  		    </tr>
-  		</table>
-  		<input type="text" id="Gdelete" placeholder="enter ID">
-  		<button onclick="deleteID()"id="gdbutton">Delete</button>
-  	</div>
-  	<div id="gpublish">
+  <div id="GGM">
+      <input id="Gsearch" type="text" name="search_id" placeholder="enter ID">
+      <button onclick="searchID()"><a herf="---------" id="gsbutton" >Search</a></button>
+      <table>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Age</th>
+          </tr>
+          <tr>
+            <th>read</th>
+            <th>read</th>
+            <th>read</th>
+          </tr>
+      </table>
+      <br></br>
+      <form action="/remove" method="post" >
+        <input type="text" id="Gdelete" name="Gdelete" placeholder="enter ID">
+        <input type="submit" value="delete" id="delete">
+      </form>
+    </div>
+    <div id="gpublish">
       <form action="/gmmessage" method="post">
-        <label for="gmessage"></label>
-        <textarea type="text" id="gmessage" cols="8" rows="20" style="OVERFLOW: hidden" placeholder="Message Box"></textarea></br>
-        <input type="submit" value="Publish" id="gpublish">
+        <label for="gmessage" ></label>
+        <input type="text" id="gmessage" placeholder="Message Box" name="gmessage"/><br>
+        <input type="submit" value="Publish" id="publish">
       </form>
       <a href="https://stark-spire-21434.herokuapp.com/login.html" id="GLog">
         <input type="button" value="Logout" id="glog">
