--- a/public/GM.html
+++ b/public/GM.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
    <link href="GM.css " rel="stylesheet" type="text/css" />	
+   <link href="GM.css " rel="stylesheet" type="text/css" /> 
     <title>GM</title>
 </head>
 <body>
@@ -41,12 +42,32 @@
 
 
   	<div id="gpublish">
+  <div id="GGM">
+      <input id="Gsearch" type="text" name="search_id" placeholder="enter ID">
+      <button onclick="searchID()"><a herf="---------" id="gsbutton" >Search</a></button>
+      <table>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Age</th>
+          </tr>
+          <tr>
+            <th>read</th>
+            <th>read</th>
+            <th>read</th>
+          </tr>
+      </table>
+      <br></br>
+      <form action="/remove" method="post" >
+        <input type="text" id="Gdelete" name="Gdelete" placeholder="enter ID">
+        <input type="submit" value="delete" id="delete">
+      </form>
+    </div>
+    <div id="gpublish">
       <form action="/gmmessage" method="post">
-
-      <label for="gmessage" ></label>
-      <input type="text" id="gmessage" placeholder="Message Box" name="gmessage"/><br>
-
-        <input type="submit" value="Publish" id="gpublish">
+        <label for="gmessage" ></label>
+        <input type="text" id="gmessage" placeholder="Message Box" name="gmessage"/><br>
+        <input type="submit" value="Publish" id="publish">
       </form>
       <a href="https://stark-spire-21434.herokuapp.com/login.html" id="GLog">
         <input type="button" value="Logout" id="glog">
