--- a/public/homepage.html
+++ b/public/homepage.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+<h1 id =data!>data</h1>
+<script src= "js/jquery.min.js"></script>
+<script>
+$.ajax({
+})    
+
+</script>
+
+
 <table id="rankingbackground">
 </table>
 <!-- need js to put back  -->
